# project_northstar_openvr_driver

./: .gitignore  BUILD.md  CMakeLists.txt  CREDITS.md  INSTALLATION.md  Install_Dependencies.bat  Northstar_setup.bat  README.md  TODO.md
cmake-3.17.2-win64-x64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-3.17.2-win64-x64/doc/cmake/html/_static/: classic.css  documentation_options.js
cmake-3.17.2-win64-x64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  enable_language.html  enable_testing.html  (+83 more)
cmake-3.17.2-win64-x64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake-3.17.2-win64-x64/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CFLAGS.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_CONFIG_TYPE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDACXX.html  CUDAFLAGS.html  CUDAHOSTCXX.html  CXX.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  FC.html  FFLAGS.html  LDFLAGS.html  MACOSX_DEPLOYMENT_TARGET.html  PackageName_ROOT.html  RC.html  RCFLAGS.html  SWIFTC.html  VERBOSE.html
cmake-3.17.2-win64-x64/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Watcom WMake.html  (+3 more)
cmake-3.17.2-win64-x64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.17.2-win64-x64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
dependencies/: CMakeLists.txt
northstar/: CMakeLists.txt
northstar/include/driver/: 2DCalibratedOptics.hpp  3DCalibratedOptics.hpp  Controller.hpp  Factory.hpp  HMD.hpp  IEnvironmentSensor.hpp  ILeapMotion.hpp  IOptics.hpp  ISensorFrameCoordinator.hpp  IStructureSensor.hpp  LeapMotion.hpp  Optics.hpp  RealSenseSensor.hpp  SensorFrameCoordinator.hpp  Server.hpp  Settings.hpp  StructureSensor.hpp  Types.hpp  Watchdog.hpp
northstar/include/math/: Geometry.hpp  IGeometry.hpp  IMatrixFactory.hpp  ISkeletalAdapter.hpp  ISpaceAdapter.hpp  IVectorFactory.hpp  IWorldAdapter.hpp  MatrixFactory.hpp  SkeletalAdapter.hpp  SpaceAdapter.hpp  Types.hpp  VectorFactory.hpp  WorldAdapter.hpp
northstar/include/mock/: MockIEnvironmentSensor.hpp  MockIGeometry.hpp  MockIHostProber.hpp  MockILeapMotion.hpp  MockILogger.hpp  MockIMatrixFactory.hpp  MockIOptics.hpp  MockISensorFrameCoordinator.hpp  MockISkeletalAdapter.hpp  MockISpaceAdapter.hpp  MockIStructureSensor.hpp  MockITimeProvider.hpp  MockIVRDriverInput.hpp  MockIVRProperties.hpp  MockIVRServerDriverHost.hpp  MockIVRSettings.hpp  MockIVectorFactory.hpp  MockIWorldAdapter.hpp
northstar/include/openvr/: IVRProperties.hpp  VRProperties.hpp
northstar/include/utility/: HostProber.hpp  IHostProber.hpp  ILogger.hpp  ITimeProvider.hpp  Logger.hpp  Preprocessor.hpp  Test.hpp  TimeProvider.hpp
northstar/src/driver/: 2DCalibratedOptics.cpp  3DCalibratedOptics.cpp  Controller.cpp  Factory.cpp  HMD.cpp  LeapMotion.cpp  Optics.cpp  RealSenseSensor.cpp  SensorFrameCoordinator.cpp  Server.cpp  StructureSensor.cpp  Watchdog.cpp
northstar/src/math/: Geometry.cpp  MatrixFactory.cpp  SkeletalAdapter.cpp  SpaceAdapter.cpp  VectorFactory.cpp  WorldAdapter.cpp
northstar/src/openvr/: VRProperties.cpp
northstar/src/platform/: dllmain.cpp
northstar/src/spec/: 2DCalibratedOpticsSpec.cpp  3DCalibratedOpticsSpec.cpp  ControllerSpec.cpp  GeometrySpec.cpp  HMDSpec.cpp  MatrixFactorySpec.cpp  OpticsSpec.cpp  SensorFrameCoordinatorSpec.cpp  SkeletalAdapterSpec.cpp  SpaceAdapterSpec.cpp  Test.cpp  VectorFactorySpec.cpp  WorldAdapterSpec.cpp
northstar/src/utility/: HostProber.cpp  Logger.cpp  Test.cpp  TimeProvider.cpp
northstar/test/src/: main.cpp
resources/installer/: POST_INSTALL.md
resources/northstar/: driver.vrdrivermanifest
resources/northstar/resources/input/: northstar_legacy_bindings.json  northstar_profile.json  steamvr_compositor_bindings_northstar.json  steamvr_home_bindings_northstar.json  steamvr_lab_bindings_northstar.json
resources/northstar/resources/settings/: default.vrsettings
(+1476 files in other folders)
